--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run infraon-website:serve-ssr",
+    "serve:ssr": "node dist/infraon-website/server/main.js",
+    "build:ssr": "ng build && ng run infraon-website:server"
   },
   "private": true,
   "dependencies": {
@@ -17,8 +20,11 @@
     "@angular/forms": "^18.2.13",
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
+    "@angular/platform-server": "^18.2.13",
     "@angular/router": "^18.2.13",
-    "rxjs": "~7.5.0",
+    "@angular/ssr": "^18.2.19",
+    "@nguniversal/express-engine": "^16.2.0",
+    "rxjs": "7.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -33,6 +39,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.4.5"
+    "typescript": "5.4"
   }
 }
